Resolves spacing issues for volume slider.

--- a/public/stylesheets/style.sass
+++ b/public/stylesheets/style.sass
@@ -139,8 +139,8 @@ input[type=number]::-webkit-inner-spin-button
   border: none
   position: relative
   margin-top: 8px
-  transform: translate(0%,-25%)
-  -moz-transform: translate(0%,120%)
+  -webkit-transform: translate(0%,30%)
+  -moz-transform: translate(0%,100%)
 
 .thumb
   visibility: hidden
@@ -207,4 +207,3 @@ input[type='number']
 
 input::-webkit-outer-spin-button, input::-webkit-inner-spin-button 
   -webkit-appearance: none
-
